<?xml version="1.0"?>
<package format="2">
  <name>message_waiter</name>
  <version>0.0.1</version>
  <description>The message_waiter package</description>

  <maintainer email="pbreid@gmail.com">Peter</maintainer>


  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>topic_tools</build_depend>
  <build_export_depend>topic_tools</build_export_depend>

</package>
